# playlist

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.App  Dockerfile.Test  README.md
src/: App.cpp  App.hpp  SharedState.cpp  SharedState.hpp  UI.cpp  UI.hpp  main.cpp  playlist.cpp  playlist.hpp
test/: CMakeLists.txt  test.cpp
